# plait-heroicons

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  update-heroicons.sh
src/: lib.rs
tests/: render.rs
